--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -37,3 +37,206 @@ code {
   border-radius: 0 25% 25% 0 !important;
   height: 100%;
 }
+
+/* Chat */
+
+.chat_general {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+
+.contenedor_chat {
+  align-items: center;
+  background-color: #fff;
+  color: #000;
+  color-scheme: light;
+  display: flex;
+  height: 100vh;
+  justify-content: space-between;
+  position: fixed;
+  width: 100%;
+}
+
+.seccion_conversaciones {
+  border-right: solid #e7e7e7;
+  height: 100%;
+  width: 20%;
+}
+
+.perfil_conversacion {
+  border-top: solid #e7e7e7;
+  height: 100%;
+  overflow-y: auto;
+  overflow-x: hidden;
+  width: 100%;
+  background-color: #dcf7fa;
+  word-break: break-all;
+}
+
+.seccion_conversacion {
+  height: 100%;
+  width: 80%;
+}
+
+.contenedor_conversacion {
+  height: 100%;
+  width: 100%;
+}
+
+.contenedor_sin_conversacion {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #dcf7fa;
+}
+
+.header_conversacion {
+  align-items: center;
+  border-bottom: solid #e7e7e7;
+  display: flex;
+  height: 15%;
+  padding: 15px;
+}
+
+.contenedor_imagen_conversacion {
+  border-radius: 100%;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  overflow: hidden;
+}
+
+.contenedor_datos_conversacion {
+  width: 80%;
+}
+
+.imagen_conversacion {
+  width: 60px;
+  height: 60px;
+  -webkit-border-radius: 60px;
+  -webkit-background-clip: padding-box;
+  -moz-border-radius: 60px;
+  -moz-background-clip: padding;
+  border-radius: 60px;
+  background-clip: padding-box;
+  margin: 7px 0 0 5px;
+  float: left;
+  background-size: cover;
+  background-position: center center;
+}
+
+.titulo_conversacion {
+  font-weight: 700;
+  margin-left: 2%;
+}
+
+.subtitulo_conversacion {
+  display: block;
+  font-size: small;
+  margin-left: 2%;
+}
+
+.body_conversacion {
+  height: 70%;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  border-bottom: solid #e7e7e7;
+  background-color: #efefef;
+  width: 100%;
+}
+
+.footer_conversacion {
+  align-items: flex-start;
+  display: flex;
+  height: 15%;
+  width: 100%;
+}
+
+.contenedor_campo_envio {
+  align-items: center;
+  background: #fff;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  min-width: 100%;
+  padding: 20px;
+}
+
+.campo_envio {
+  border: none;
+  border-radius: 5px;
+  box-sizing: border-box;
+  color: #333;
+  flex: 1;
+  font-size: 14px;
+  height: 40px;
+  outline: 0;
+  padding: 0 5px;
+  margin-right: 10px;
+}
+
+@media only screen and (max-width: 600px) {
+  .contenedor_chat {
+      padding-right: 20px;
+      height: 80vh;
+  }
+
+  .seccion_conversaciones {
+      visibility: hidden;
+      width: 0%;
+  }
+  
+  .seccion_conversacion {
+      width: 100%;
+  }
+}
+
+@media only screen and (min-width: 601px) and (max-width: 950px) {
+  .seccion_conversaciones {
+      width: 30%;
+  }
+  
+  .seccion_conversacion {
+      width: 70%;
+  }
+}
+
+@media only screen and (min-width: 601px) {
+  .header_conversacion {
+      visibility: hidden;
+      padding: 0px;
+      height: 0%;
+  }
+
+  .body_conversacion {
+      height: 85%;
+  }
+}
+
+/* Perfil */
+
+.contenedor_imagen_perfil {
+  border-radius: 50%;
+  display: inline-block;
+  position: relative;
+  padding: 0px;
+  background: #fff;
+  border: 5px solid #00cdc1;
+}
+
+.contenedor_imagen{
+  position: relative;
+  width: 200px;
+  height: 200px;
+  overflow: hidden;
+  border-radius: 50%;
+  background-color: #fff;
+}
+
+#imagen_perfil {
+  width: auto;
+  height: 100%;
+}
