--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -180,8 +180,10 @@ code {
 }
 
 #profile_image {
-  width: auto;
+  width: 100%;
   height: 100%;
+  object-fit: cover;
+  object-position: center;
 }
 
 /* Image profile */
@@ -233,6 +235,24 @@ input[type="file"] {
 }
 
 #img-photo {
-  width: auto;
+  width: 100%;
   height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+/* Loader */
+.loader_container {
+  position: fixed;
+  height: 100vh;
+  width: 100%;
+  background-color: rgba(1,1,1,0.6);
+  z-index: 10000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.animation_container {
+  margin-top: -20px;
 }
